{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 32,
  "lineage": "d52a3d09-f06c-3e93-ecc4-e81fd1ddb43f",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_group_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250919241461:security-group/sg-04e800973240a9419",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e800973240a9419",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "node_group_one20240306092147722900000008",
            "name_prefix": "node_group_one",
            "owner_id": "250919241461",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0eb8d3c44b74c71a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.tessolve"
          ]
        }
      ]
    },
    {
      "module": "module.rds_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250919241461:security-group/sg-00da9bfa5a458a217",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-00da9bfa5a458a217",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "tessolverds2",
            "name_prefix": "",
            "owner_id": "250919241461",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tessolverds2"
            },
            "tags_all": {
              "Name": "tessolverds2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb8d3c44b74c71a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.tessolve"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "internal_tessolve_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250919241461:route-table/rtb-0365eae81e537659e",
            "default_route_table_id": "rtb-0365eae81e537659e",
            "id": "rtb-0365eae81e537659e",
            "owner_id": "250919241461",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05788ca67a084c947",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tessolve"
            },
            "tags_all": {
              "Name": "tessolve"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb8d3c44b74c71a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.tessolve_gw",
            "module.vpc.aws_vpc.tessolve"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tessolve_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250919241461:internet-gateway/igw-05788ca67a084c947",
            "id": "igw-05788ca67a084c947",
            "owner_id": "250919241461",
            "tags": {
              "Name": "tessolve"
            },
            "tags_all": {
              "Name": "tessolve"
            },
            "vpc_id": "vpc-0eb8d3c44b74c71a3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tessolve"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b03c62d37bd3aa1",
            "route_table_id": "rtb-0365eae81e537659e",
            "subnet_id": "subnet-02462fda94362931a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tessolve",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list",
            "module.vpc.aws_default_route_table.internal_tessolve_default",
            "module.vpc.aws_internet_gateway.tessolve_gw",
            "module.vpc.aws_subnet.public_tessolve_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0148c586f6a5301",
            "route_table_id": "rtb-0365eae81e537659e",
            "subnet_id": "subnet-0e6222902d756f5c7"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.internal_tessolve_default",
            "module.vpc.aws_internet_gateway.tessolve_gw",
            "module.vpc.aws_subnet.public_tessolve_subnet",
            "module.vpc.aws_vpc.tessolve",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_tessolve_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250919241461:subnet/subnet-02462fda94362931a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02462fda94362931a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250919241461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tessolve"
            },
            "tags_all": {
              "Name": "tessolve"
            },
            "vpc_id": "vpc-0eb8d3c44b74c71a3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tessolve",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250919241461:subnet/subnet-0e6222902d756f5c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6222902d756f5c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250919241461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tessolve"
            },
            "tags_all": {
              "Name": "tessolve"
            },
            "vpc_id": "vpc-0eb8d3c44b74c71a3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tessolve",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tessolve",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250919241461:vpc/vpc-0eb8d3c44b74c71a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0705615a23ff82367",
            "default_route_table_id": "rtb-0365eae81e537659e",
            "default_security_group_id": "sg-011fea687e880a897",
            "dhcp_options_id": "dopt-0955a76ddb9cc5ece",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eb8d3c44b74c71a3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0365eae81e537659e",
            "owner_id": "250919241461",
            "tags": {
              "Name": "tessolve"
            },
            "tags_all": {
              "Name": "tessolve"
            }
          }
        }
      ]
    }
  ]
}